def/force-app/main/default/objects/StudentMarks__c/fields/MArks__c.field-meta.xml
<CustomField>
    <fullName>MArks__c</fullName>
    <label>Marks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>