def/force-app/main/default/objects/StudentMarks__c/fields/parentuiniv__c.field-meta.xml
<CustomField>
    <fullName>parentuiniv__c</fullName>
    <formula>&quot;Test&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>parentuiniv</label>
    <type>Text</type>
</CustomField>