def/force-app/main/default/objects/StudentMarks__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <formula>IF(MArks__c &lt;35, &apos;Fail&apos;,&apos;Pass&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result</label>
    <type>Text</type>
</CustomField>