def/force-app/main/default/objects/StudentMarks__c/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <formula>IF(MArks__c &gt;35, &apos;Pass&apos;,&apos;Fail&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Results</label>
    <type>Text</type>
</CustomField>