def/force-app/main/default/objects/StudentMarks__c/fields/Studentmasterdepart__c.field-meta.xml
<CustomField>
    <fullName>Studentmasterdepart__c</fullName>
    <formula>TEXT( StudentMaster__r.DOJ__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Studentmasterdepart</label>
    <type>Text</type>
</CustomField>