def/force-app/main/default/objects/StudentMarks__c/fields/StudentMasteremc__c.field-meta.xml
<CustomField>
    <fullName>StudentMasteremc__c</fullName>
    <label>StudentMasteremc</label>
    <referenceTo>StudentMasteremc__c</referenceTo>
    <relationshipLabel>StudentMarks</relationshipLabel>
    <relationshipName>StudentMarks</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>