def/force-app/main/default/objects/StudentMarks__c/fields/Studentmasterrecphone__c.field-meta.xml
<CustomField>
    <fullName>Studentmasterrecphone__c</fullName>
    <formula>StudentMaster__r.Studentphone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Studentmasterrecphone</label>
    <type>Text</type>
</CustomField>