def/force-app/main/default/objects/StudentMarks__c/fields/Subjects__c.field-meta.xml
<CustomField>
    <fullName>Subjects__c</fullName>
    <label>Subjects</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Maths</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>