def/force-app/main/default/objects/StudentMarks__c/listViews/tesview.listView-meta.xml
<ListView>
    <fullName>tesview</fullName>
    <columns>NAME</columns>
    <columns>MArks__c</columns>
    <columns>parentuiniv__c</columns>
    <columns>Result__c</columns>
    <columns>Results__c</columns>
    <columns>StudentMaster__c</columns>
    <columns>Studentmasterdepart__c</columns>
    <columns>Studentmasterrecphone__c</columns>
    <columns>Subjects__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>tesview</label>
    <language>en_US</language>
</ListView>